2003-10-30  Per Bothner  <per@bothner.com>

	* configure.in:  Add link to gnu/xquery/testsuite/auction.xml.in.

2003-10-28  Per Bothner  <per@bothner.com>

	* Make-rules (DONT_EDIT_SUBS):  Move to gnu/xml/Makefile.am.

2003-10-21  Per Bothner  <per@bothner.com>

	* configure.in:  Set version to 1.7.90.
	* build.xml (version.release):  Set to 1.7.90.

2003-10-19  Per Bothner  <per@bothner.com>

	* kawa/lang/Eval.java (evalBody):  Need to pass Interpreter
	to new Translator.
	* kawa/lang/Translator.java (<init>):  Take Interpreter.
	Remove unused constructors.
	(resolve):  Moved to super class Compilation.

	* kawa/standard/module_compile_options.java:  New class extends Syntax.
	* kawa/standard/with_compile_options.java:  New class extends Syntax.
	* kawa/standard/Makefile.am:  Update accordingly.
	* kawa/standard/Scheme.java:  Define '"module-compile-options'
	and 'with-compile-options'.

2003-10-18  Jim White  <jim@pagesmiths.com>

	* build.xml:  Handle gnu/kawa/models and gnu/kawa/swingviews.

2003-10-16  Per Bothner  <per@bothner.com>

	* kawa/lang/AutoloadSyntax.java (load):  Give Syntax object a name.

	* kawa/repl.java (processArgs):  Try arguments in Compiletion.options.

2003-10-12  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite_pair):  Check if decl's
	constant value is a Syntax rather than using IS_SYNTAX flag.

	* kawa/standard/Scheme.java (Scheme):  Update isEq initialization.

2003-10-09  Per Bothner  <per@bothner.com>

	* kawa/standard/read.java (apply1):  Use Procedure's getName
	method rather than the deprecated name.

2003-10-08  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (initScheme):  Use define_field to
	define 'values-append', since it allows better optimization.

	* kawa/standard/require.java (scanForDefinitions):  Split most into
	new method importDefinitions - used for XQuery modules.
	(importDefinitions):  New static method.  Take module namespace.
	Note if decl is a procedure decl.
