@@ -1,3 +1,12 @@
+2003-11-02  Per Bothner  <per@bothner.com>
+
+	* kawa/Shell.java (run):  Replace call to old 'parse' method
+	by call to 'parse' with different parameter list.
+	* kawa/lang/CompileFile.java (read):  Replace 'parseFile' call
+	by call to new 'parse' method.
+	* kawa/lang/Eval.java (evalBody):  Inline LispInterpreter.makeModuleExp
+	here, so we can get rid of it.
+
 2003-10-30  Per Bothner  <per@bothner.com>
 
 	* configure.in:  Add link to gnu/xquery/testsuite/auction.xml.in.
